# boardgame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
assets/: README.md
demo/: sample_window.data  sample_window.html  sample_window.js  sample_window.wasm
docs/: WebAssembly-Guide.md
src/: main.cpp
web/: shell.html
